Analytics integration, spelling fixes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   layout: default
 ---
 <div class="content--center">
-Comming Soon
+Coming Soon
 </div>
 <div class="content--description">
   Please be patient, we will be launched soon!
+  <div class="content--mailer"></div>
 </div>
