Large improvements over site

--- a/_posts/2016-12-06-services.html
+++ b/_posts/2016-12-06-services.html
@@ -6,9 +6,9 @@ link: services
 <div class="bloc bgc-white l-bloc" id="services">
 	<div class="container bloc-lg bloc-heading">
 		<div class="row row-no-gutters">
-			<div class="col-sm-12">
-				<h1 class=" text-center hero-bloc-text tc-white mg-lg tc-smoky-black text-center-xs">
-					What services do we provide?<br>
+			<div class="col-sm-12" id="service">
+				<h1 class=" text-center hero-bloc-text tc-white tc-smoky-black text-center-xs">
+					What services do we provide?
 				</h1>
 			</div>
 		</div>
@@ -17,253 +17,222 @@ link: services
 <!-- bloc-5 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-Space-Wallpaper-1920x1080 tc-white bgc-white hidden-xs" id="bloc-6">
+<div class="bloc bg-Space-Wallpaper-1920x1080 tc-white bgc-white service-web service" id="bloc-6">
 	<div class="container bloc-xl">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="row service--plate">
-					<div class="col-sm-6 col-sm-push-6 col-sm-67 col-sm-6668">
-						<img src="assets/responsive-design-example.png" class="img-responsive image-resize-mode" />
+		<div class="row service--plate content-decoration">
+					<div class="row">
+						<div class="col-sm-12">
+							<h2 class="mg-md tc-white text-left-xs service-header">
+								Web applications development and integration.
+							</h2>
+						</div>
 					</div>
-					<div class="col-sm-6 col-sm-pull-6 col-sm-65 col-sm-6664">
-						<h2 class=" mg-md tc-white text-left-xs">
-							Web applications development and integration.
-						</h2>
-						<p class=" mg-sm">
-							Responsive site design leads to best user experience different kinds of devices.<br>
-						</p>
-						<ul class="list-unstyled">
-							<li>
-								<p class=" mg-sm">
-									eCommerce solutions, based on market leaders with customizations to fit simlesly your needs. <br>
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="col-sm-6 col-sm-push-6 col-sm-67 col-sm-6668">
+								<img src="assets/responsive-design-example.png" class="img-responsive image-resize-mode" />
+							</div>
+							<div class="col-sm-6 col-sm-pull-6 col-sm-65 col-sm-6664">
+
+								<p class=" mg-sm service-description">
+									Responsive site design leads to best user experience different kinds of devices.<br>
 								</p>
-							</li>
-							<li>
-								<p class=" mg-sm">
-									Single Page Applications development
-								</p>
-							</li>
-							<li>
-								<p>
-									<br>
-								</p>
-							</li>
-						</ul><a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+								<ul class="list-unstyled0">
+									<li>
+										<p class=" mg-sm">
+											eCommerce solutions, based on market leaders with customizations to fit simlesly your needs. <br>
+										</p>
+									</li>
+									<li>
+										<p class=" mg-sm">
+											Single Page Applications development
+										</p>
+									</li>
+								</ul><a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 </div>
 <!-- bloc-6 END -->
 
-<!-- bloc-7 -->
-<div class="bloc bg-Space-Wallpaper-1920x1080 tc-white bgc-white hidden-sm hidden-lg hidden-md" id="bloc-7">
-	<div class="container bloc-xl">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="row service--plate">
-					<div class="col-sm-6 col-sm-push-6 col-sm-67 col-sm-6668">
-						<img src="assets/responsive-design-example.png" class="img-responsive image-resize-mode" />
-					</div>
-					<div class="col-sm-6 col-sm-pull-6 col-sm-65 col-sm-6664">
-						<h2 class=" mg-md tc-white text-left-xs ">
-							Web applications development and integration.
-						</h2>
-						<p class=" mg-sm">
-							Responsive site design leads to best user experience different kinds of devices.<br>
-						</p>
-						<ul class="list-unstyled">
-							<li>
-								<p class=" mg-sm">
-									eCommerce solutions, based on market leaders with customizations to fit simlesly your needs. <br>
-								</p>
-							</li>
-							<li>
-								<p class=" mg-sm">
-									Single Page Applications development
-								</p>
-							</li>
-							<li>
-								<p>
-									<br>
-								</p>
-							</li>
-						</ul><a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+<!-- bloc-8 -->
+<div class="bloc tc-smoky-black bgc-white service service-mobile" id="bloc-8">
+	<div class="container bloc-lg">
+		<div class="row content-decoration">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="mg-lg  tc-smoky-black service-header">
+						Mobile applications
+					</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+			<div class="col-sm-6 col-sm-push-6">
+				<div class="center-block blocsapp-device blocsapp-device-iphone6 iphone6-space-grey animated puffIn">
+					<div id="carousel-mobile-designes" class="carousel slide" data-ride="carousel">
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+					    <li data-target="#carousel-mobile-designes" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel-mobile-designes" data-slide-to="1"></li>
+					  </ol>
+
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+							<img src="assets/phone-app.jpg" class="img-responsive" />
+						</div>
+						<div class="item">
+							<img src="assets/phone-app.jpg" class="img-responsive" />
+							<!--<div class="carousel-caption">
+								...
+							</div>-->
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+			<div class="col-sm-6 col-sm-pull-6">
+				<p class=" mg-md service-description">
+					We choose to make native mobile applications with frameworks that delivers multiplatform coverage.
+				</p>
+				<ul class="list-unstyled0 service-mobile--list">
+					<li>
+
+								<img src="assets/react.svg" class="service--icon" />
+								<span class="text-left">
+									React Native
+								</span>
+
+					</li>
+					<li>
+
+								<img src="assets/Xamagon.png" class="service--icon" />
+
+								<span class="text-left">
+									Xamarin
+								</span>
+
+					</li>
+					<li>
+
+								<img src="assets/nativescript.png" class="service--icon" />
+
+								<span  class="text-left">
+									NativeScript/Angular2
+								</span>
+
+					</li>
+				</ul><a href="index.html" class="btn btn-lg btn-sq btn-block btn-medium-jungle-green">More</a>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-7 END -->
-
-<!-- bloc-8 -->
-<div class="bloc tc-smoky-black bgc-white" id="bloc-8">
-	<div class="container bloc-lg">
-		<div class="row voffset-lg">
-			<div class="col-sm-6 col-sm-push-6">
-				<div class="center-block blocsapp-device blocsapp-device-iphone6 iphone6-space-grey animated puffIn">
-					<img src="assets/phone-app.jpg" class="img-responsive" />
-				</div>
-			</div>
-			<div class="col-sm-6 col-sm-pull-6">
-				<h2 class="mg-lg  tc-smoky-black">
-					Mobile applications<br>
-				</h2>
-				<p class=" mg-md">
-					We choose to make native mobile applications with frameworks that delivers multiplatform coverage.
-				</p>
-				<ul class="list-unstyled service--mobile-list">
-					<li>
-						<div class="row">
-							<div class="col-sm-2">
-								<img src="assets/react.svg" class="img-responsive service--icon" />
-							</div>
-							<div class="col-sm-8">
-								<p class="text-left">
-									React Native
-								</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col-sm-2">
-								<img src="assets/Xamagon.png" class="img-responsive service--icon" />
-							</div>
-							<div class="col-sm-8">
-								<p class="text-left">
-									Xamarin
-								</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col-sm-2">
-								<img src="assets/nativescript.png" class="img-responsive service--icon mg-md" />
-							</div>
-							<div class="col-sm-8">
-								<p  class="text-left">
-									NativeScript/Angular2
-								</p>
-							</div>
-						</div>
-					</li>
-				</ul><a href="index.html" class="btn   btn-lg btn-sq btn-block btn-medium-jungle-green">More</a>
-			</div>
-		</div>
 	</div>
 </div>
 <!-- bloc-8 END -->
 
 <!-- bloc-9 -->
-<div class="bloc bg-home-slide-image3 bgc-white tc-white" id="bloc-9">
+<div class="bloc bg-home-slide-image3 bgc-white tc-white service service-bs" id="bloc-9">
 	<div class="container bloc-xl">
-		<div class="row service--plate">
-			<div class="col-sm-12">
-				<div class="row">
-					<div class="col-sm-6">
-						<h3 class="mg-md  tc-white">
-							Business solutions
-						</h3>
-						<p>
-							Solutions that powers-up your business
-						</p>
-						<ul class="list-unstyled service--mobile-list">
-							<li>
-								<div class="row">
-								</div>
-							</li>
-							<li>
-								<div class="row">
-									<div class="col-sm-4">
-										<img src="assets/mautic.png" class="img-responsive service--icon" />
-									</div>
-									<div class="col-sm-8">
-										<p class="text-left">
-											Marketing automation <br>
-										</p>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="row">
-									<div class="col-sm-4">
-										<img src="assets/logo_bpm.png" class="img-responsive service--icon service--icon-white-bg" />
-									</div>
-									<div class="col-sm-8">
-										<p class="text-left">
-											CRM / bpm*online<br>
-										</p>
-									</div>
-								</div>
-							</li>
-							<li>
-								<div class="row">
-									<div class="col-sm-4">
-										<img src="assets/splunk-logo-round.png" class="img-responsive service--icon" />
-									</div>
-									<div class="col-sm-8">
-										<p class="text-left">
-											Splunk
-										</p>
-									</div>
-								</div>
-							</li>
-						</ul><a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+		<div class="row service--plate content-decoration">
+					<div class="row">
+						<div class="col-sm-12">
+							<h2 class="mg-md  tc-white service-header">
+								Business solutions
+							</h2>
+						</div>
 					</div>
+					<div class="row">
+
+
 					<div class="col-sm-6">
 						<div class="center-block blocsapp-device blocsapp-device-imac">
 							<img src="assets/Chats.png" class="img-responsive" />
 						</div>
 					</div>
+					<div class="col-sm-6">
+						<p class="service-description">
+							Solutions that powers-up your business
+						</p>
+						<ul class="list-unstyled0 service-mobile--list">
+
+							<li>
+
+										<img src="assets/mautic.png" class="service--icon" />
+										<span class="text-left">
+											Marketing automation
+										</span>
+
+							</li>
+							<li>
+
+										<img src="assets/logo_bpm.png" class="service--icon service--icon-white-bg" />
+
+										<span class="text-left">
+											CRM / bpm*online
+										</span>
+
+							</li>
+							<li>
+
+										<img src="assets/splunk-logo-round.png" class="service--icon" />
+
+										<span class="text-left">
+											Splunk
+										</span>
+
+							</li>
+						</ul>
+						<a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 <!-- bloc-9 END -->
 
 <!-- bloc-10 -->
-<div class="bloc l-bloc bgc-white" id="bloc-10">
+<div class="bloc l-bloc bgc-white service service-security" id="bloc-10">
 	<div class="container bloc-xl">
-		<div class="row">
-			<div class="col-sm-12">
+			<div class="row">
 				<div class="row">
-					<div class="col-sm-6">
-						<h3 class="mg-md ">
-							Security and IT infrastructure <br>
-						</h3>
-						<p>
-							Managing and developing of your infrastructure<br>
-						</p>
-						<ul class="list-unstyled">
-							<li>
-								<div class="row voffset">
-								</div>
-							</li>
-							<li>
-								<p>
-									Cloud infrastructure development and management<br>
-								</p>
-							</li>
-							<li>
-								<p>
-									Audit and pentest of your infrastructure to provide full view of your current <br><br>
-								</p>
-							</li>
-						</ul><a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+					<div class="col-sm-12">
+						<h2 class="mg-md  service-header">
+								Security and IT infrastructure
+						</h2>
 					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-12">
 					<div class="col-sm-6">
 						<div class="center-block blocsapp-device blocsapp-device-mb blocsapp-device-mbp">
 							<img src="assets/HIPAA_Dashboard_screenshot.jpg" class="img-responsive" />
 						</div>
 					</div>
+					<div class="col-sm-6">
+						<p class="service-description">
+							Managing and developing of your infrastructure
+						</p>
+						<ul class="list-unstyled0">
+
+							<li>
+								<span>
+									Cloud infrastructure development and management
+								</span>
+							</li>
+							<li>
+								<span>
+									Audit and pentest of your infrastructure to provide full view of your current <br><br>
+								</span>
+							</li>
+						</ul>
+						<a href="index.html" class="btn   btn-sq btn-lg btn-block btn-medium-jungle-green">More</a>
+					</div>
+				</div>
 				</div>
 			</div>
-		</div>
 	</div>
 </div>
 <!-- bloc-10 END -->
