--- a/_posts/2016-12-07-contacts.html
+++ b/_posts/2016-12-07-contacts.html
@@ -2,7 +2,7 @@
 link: contacts
 ---
 <!-- Contact Canada -->
-<div class="bloc full-width-bloc bg-Canada-location tc-white bgc-white l-bloc" id="contacts">
+<div class="bloc full-width-bloc bg-Canada-location tc-white bgc-white l-bloc contacts" id="contacts">
 	<div class="container">
 		<div class="row l-bloc">
 			<div class="col-sm-4">
@@ -20,7 +20,13 @@ link: contacts
 							<div class="panel-body">
 								<h3 class="mg-md  tc-white">
 									Canada office location
-								</h3><a href="https://www.google.com.ua/maps/place/1581+Granada+Crescent,+Victoria,+BC+V8N+2B8,+Canada/@48.4831669,-123.3422299,501m/data=!3m2!1e3!4b1!4m5!3m4!1s0x548f717e77cf96fb:0xe0506983681b8a42!8m2!3d48.4831669!4d-123.3400412" class="a-btn a-block" target="_blank">Link to google map</a>
+								</h3>
+								<address>
+									Canada, Vancouver<br/>
+									1581 Granada crest<br/>
+									<abbr title="Phone">P:</abbr>250 891 5430
+								</address>
+								<a href="https://www.google.com.ua/maps/place/1581+Granada+Crescent,+Victoria,+BC+V8N+2B8,+Canada/@48.4831669,-123.3422299,501m/data=!3m2!1e3!4b1!4m5!3m4!1s0x548f717e77cf96fb:0xe0506983681b8a42!8m2!3d48.4831669!4d-123.3400412" class="a-btn a-block" target="_blank">Link to google map</a>
 							</div>
 						</div>
 					</div>
@@ -32,7 +38,7 @@ link: contacts
 <!-- Contact Canada END -->
 
 <!-- Contact Kyiv -->
-<div class="bloc full-width-bloc bgc-white bg-Kyiv-location-2 d-bloc" id="bloc-12">
+<div class="bloc full-width-bloc bgc-white bg-Kyiv-location-2 d-bloc contacts" id="bloc-12">
 	<div class="container">
 		<div class="row l-bloc">
 			<div class="col-sm-4">
@@ -51,7 +57,14 @@ link: contacts
 							<div class="panel-body">
 								<h3 class="mg-md  tc-white">
 									Kyiv office location
-								</h3><a href="https://www.google.com.ua/maps/place/Vyborzka+St,+104,+Kyiv/@50.4516251,30.4236405,791m/data=!3m1!1e3!4m5!3m4!1s0x40d4cc408497cb67:0xc1de3dc49d80e182!8m2!3d50.4520985!4d30.4217489" class="a-btn a-block" target="_blank">Link to google map</a>
+								</h3>
+								<address>
+										Ukraine, Kyiv<br/>
+										Vyborzka Street, 104<br/>
+										<abbr title="Phone">P:</abbr> +38 044 232 37 68
+									</div>
+								</address>
+								<a href="https://www.google.com.ua/maps/place/Vyborzka+St,+104,+Kyiv/@50.4516251,30.4236405,791m/data=!3m1!1e3!4m5!3m4!1s0x40d4cc408497cb67:0xc1de3dc49d80e182!8m2!3d50.4520985!4d30.4217489" class="a-btn a-block" target="_blank">Link to google map</a>
 							</div>
 						</div>
 					</div>
