--- a/_posts/2016-12-04-intro.html
+++ b/_posts/2016-12-04-intro.html
@@ -3,20 +3,18 @@ link: intro
 ---
 
 <!-- intro -->
-<div class="bloc bgc-white l-bloc" id="bloc-5">
+<div class="bloc bgc-white l-bloc" id="intro">
 	<div class="container bloc-lg bloc-heading">
 		<div class="row row-no-gutters">
 			<div class="col-sm-12">
-				<h1 class=" text-center hero-bloc-text tc-white mg-lg tc-smoky-black text-center-xs">
-					Who we are?
-				</h1>
+				<h1 class=" text-center hero-bloc-text tc-white tc-smoky-black text-center-xs">Who we are?</h1>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="bloc bgc-white bg-who-we-are" id="bloc-3">
 	<div class="container bloc-xl">
-		<div class="row service--plate">
+		<div class="row service--plate content-decoration">
 			<div class="col-sm-12">
 				<p class="tc-white mg-lg">
 					PixelValue is an outsource and outstaff company,
