Cookie policy notification. Mobile images optimization

--- a/_posts/2016-12-04-intro.html
+++ b/_posts/2016-12-04-intro.html
@@ -3,7 +3,7 @@ link: intro
 ---
 
 <!-- intro -->
-<div class="bloc bgc-white l-bloc" id="intro">
+<div class="bloc bgc-white l-bloc site-module" id="intro">
 	<div class="container bloc-lg bloc-heading">
 		<div class="row row-no-gutters">
 			<div class="col-sm-12">
