--- a/_posts/2016-12-06-services.html
+++ b/_posts/2016-12-06-services.html
@@ -3,7 +3,7 @@ link: services
 ---
 
 <!-- bloc-5 -->
-<div class="bloc bgc-white l-bloc" id="services">
+<div class="bloc bgc-white l-bloc site-module" id="services">
 	<div class="container bloc-lg bloc-heading">
 		<div class="row row-no-gutters">
 			<div class="col-sm-12" id="service">
@@ -17,7 +17,7 @@ link: services
 <!-- bloc-5 END -->
 
 <!-- bloc-6 -->
-<div class="bloc bg-Space-Wallpaper-1920x1080 tc-white bgc-white service-web service" id="bloc-6">
+<div class="bloc bg-web-services tc-white bgc-white service-web service" id="bloc-6">
 	<div class="container bloc-xl">
 		<div class="row service--plate content-decoration">
 					<div class="row">
@@ -30,7 +30,13 @@ link: services
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="col-sm-6 col-sm-push-6 col-sm-67 col-sm-6668">
-								<img src="assets/responsive-design-example.png" class="img-responsive image-resize-mode" />
+
+								<img class="img-responsive image-resize-mode"
+									src="assets/responsive-displays-320.png"
+									srcset="assets/responsive-displays-720.png 700w,
+													assets/responsive-displays.png 1000w"
+								/>
+
 							</div>
 							<div class="col-sm-6 col-sm-pull-6 col-sm-65 col-sm-6664">
 
@@ -134,7 +140,7 @@ link: services
 <!-- bloc-8 END -->
 
 <!-- bloc-9 -->
-<div class="bloc bg-home-slide-image3 bgc-white tc-white service service-bs" id="bloc-9">
+<div class="bloc bg-business-solutions bgc-white tc-white service service-bs" id="bloc-9">
 	<div class="container bloc-xl">
 		<div class="row service--plate content-decoration">
 					<div class="row">
@@ -149,7 +155,11 @@ link: services
 
 					<div class="col-sm-6">
 						<div class="center-block blocsapp-device blocsapp-device-imac">
-							<img src="assets/Chats.png" class="img-responsive" />
+							<img class="img-responsive"
+										src="assets/chats-640.jpg"
+										srcset="assets/chats-320.jpg 300w,
+														assets/chats-640.jpg 1000w"
+							/>
 						</div>
 					</div>
 					<div class="col-sm-6">
@@ -208,7 +218,11 @@ link: services
 					<div class="col-sm-12">
 					<div class="col-sm-6">
 						<div class="center-block blocsapp-device blocsapp-device-mb blocsapp-device-mbp">
-							<img src="assets/HIPAA_Dashboard_screenshot.jpg" class="img-responsive" />
+							<img class="img-responsive"
+										src="assets/HIPAA_Dashboard_screenshot-320.jpg"
+										srcset="assets/HIPAA_Dashboard_screenshot-320.jpg 600w,
+														assets/HIPAA_Dashboard_screenshot.jpg 1000w"
+							/>
 						</div>
 					</div>
 					<div class="col-sm-6">
