--- a/_posts/2016-12-07-contacts.html
+++ b/_posts/2016-12-07-contacts.html
@@ -2,7 +2,7 @@
 link: contacts
 ---
 <!-- Contact Canada -->
-<div class="bloc full-width-bloc bg-Canada-location tc-white bgc-white l-bloc contacts" id="contacts">
+<div class="bloc full-width-bloc bg-Canada-location tc-white bgc-white l-bloc contacts site-module" id="contacts">
 	<div class="container">
 		<div class="row l-bloc">
 			<div class="col-sm-4">
@@ -38,7 +38,7 @@ link: contacts
 <!-- Contact Canada END -->
 
 <!-- Contact Kyiv -->
-<div class="bloc full-width-bloc bgc-white bg-Kyiv-location-2 d-bloc contacts" id="bloc-12">
+<div class="bloc full-width-bloc bgc-white bg-Kyiv-location d-bloc contacts" id="bloc-12">
 	<div class="container">
 		<div class="row l-bloc">
 			<div class="col-sm-4">
