--- a/_posts/2016-12-05-vision.html
+++ b/_posts/2016-12-05-vision.html
@@ -3,7 +3,7 @@ link: vision
 ---
 
 <!-- vision -->
-<div class="bloc bgc-white l-bloc" id="vision" data-view-shift="100">
+<div class="bloc bgc-white l-bloc site-module" id="vision" data-view-shift="100">
 	<div class="container bloc-lg bloc-heading">
 		<div class="row row-no-gutters">
 			<div class="col-sm-12">
@@ -14,7 +14,7 @@ link: vision
 		</div>
 	</div>
 </div>
-<div class="bloc bgc-white tc-white bg-real-northern-lights-wallpaper-1 bg-t-edge" id="bloc-4">
+<div class="bloc tc-white bg-vision bg-t-edge" id="bloc-4">
 	<div class="container bloc-xl">
 		<div class="row content-decoration">
 			<div class="col-sm-12">
