Fixed position for vision section background. Changed subscription iteraction with removal of modal screen(reduced steps). Added stub for sending subscription to analytics. Google search verification code added.

--- a/_posts/2016-12-04-intro.html
+++ b/_posts/2016-12-04-intro.html
@@ -17,11 +17,10 @@ link: intro
 		<div class="row service--plate content-decoration">
 			<div class="col-sm-12">
 				<p class="tc-white mg-lg">
-					PixelValue is an outsource and outstaff company,
-          that can help you with simple and effective solutions.
-          Our story started with phone call and few fellows,
-          leaving the comfort of big IT companies
-          for the idea of elaborating projects with our vision.
+					PixelValue is outsourcing company that can help you with simple and effective solutions. 
+					Our story began with phone calls and few enthusiastic fellows
+					who despite leaving the comfort of big IT companies
+					wanted to help elaborating projects with their own vision.
 				</p>
 			</div>
 		</div>
