--- a/_posts/2016-12-05-vision.html
+++ b/_posts/2016-12-05-vision.html
@@ -14,12 +14,12 @@ link: vision
 		</div>
 	</div>
 </div>
-<div class="bloc tc-white bg-vision bg-t-edge" id="bloc-4">
+<div class="bloc tc-white bg-vision" id="bloc-4">
 	<div class="container bloc-xl">
-		<div class="row content-decoration">
+		<div class="row service--plate-l content-decoration">
 			<div class="col-sm-12">
 				<p class="tc-white mg-lg">
-					We offers design and development services. We create simple and effective solution of your ideas, we value time of our partners, guided by scrum methodology and agile concepts we adjust to new requirements. From the beginning, you will be in touch with our project manager and tech lead who will find proper solution and technologies for you that could be seamlessly integrated into your architecture. <br>
+					We offer design and development services. We create simple, responsive, and effective solutions for your ideas. We value time of our partners, so we can adjust to new technologies, requirements, and new industry trends. From the beginning, you will be in touch with our project manager and tech lead who will help you to find a proper solution and technology.
 				</p>
 			</div>
 		</div>
