--- a/_posts/2016-12-07-contacts.html
+++ b/_posts/2016-12-07-contacts.html
@@ -18,16 +18,18 @@ link: contacts
 					<div class="col-sm-12">
 						<div class="panel panel-sq fade-bg">
 							<div class="panel-body">
-								<h3 class="mg-md  tc-white">
-									Canada office location
-								</h3>
+									<h3 class="mg-md  tc-white contact-title">
+										<i class="fa fa-map-o" aria-hidden="true"></i>
+										<a href="https://www.google.com.ua/maps/place/1581+Granada+Crescent,+Victoria,+BC+V8N+2B8,+Canada/@48.4831669,-123.3422299,501m/data=!3m2!1e3!4b1!4m5!3m4!1s0x548f717e77cf96fb:0xe0506983681b8a42!8m2!3d48.4831669!4d-123.3400412" class="a-btn" target="_blank">
+											Canada office location
+										</a>
+									</h3>
 								<address>
 									Canada, Vancouver<br/>
 									1581 Granada crest<br/>
-									<abbr title="Phone">P:</abbr>250 891 5430
-									
+									<i class="fa fa-phone" aria-hidden="true">&nbsp;</i><abbr title="Phone">P:</abbr>&nbsp;<span>+1 250 891 5430<span><br/>
+									<i class="fa fa-envelope" aria-hidden="true">&nbsp;</i><abbr title="Mail">M:</abbr>&nbsp;<a href="mailto:ca.office@pixelvalue.io">ca.office@pixelvalue.io</a>
 								</address>
-								<a href="https://www.google.com.ua/maps/place/1581+Granada+Crescent,+Victoria,+BC+V8N+2B8,+Canada/@48.4831669,-123.3422299,501m/data=!3m2!1e3!4b1!4m5!3m4!1s0x548f717e77cf96fb:0xe0506983681b8a42!8m2!3d48.4831669!4d-123.3400412" class="a-btn a-block" target="_blank">Link to google map</a>
 							</div>
 						</div>
 					</div>
@@ -54,18 +56,21 @@ link: contacts
 			<div class="col-sm-4">
 				<div class="row voffset-lg">
 					<div class="col-sm-12">
-						<div class="panel panel-sq fade-bg">
+							<div class="panel panel-sq fade-bg">
 							<div class="panel-body">
-								<h3 class="mg-md  tc-white">
-									Kyiv office location
-								</h3>
+									<h3 class="mg-md  tc-white contact-title">
+										<i class="fa fa-map-o" aria-hidden="true"></i>
+										<a href="https://www.google.com.ua/maps/place/Vyborzka+St,+104,+Kyiv/@50.4516251,30.4236405,791m/data=!3m1!1e3!4m5!3m4!1s0x40d4cc408497cb67:0xc1de3dc49d80e182!8m2!3d50.4520985!4d30.4217489" class="a-btn" target="_blank">
+										Kyiv office location
+										</a>
+									</h3>
 								<address>
 										Ukraine, Kyiv<br/>
 										Vyborzka Street, 104<br/>
-										<abbr title="Phone">P:</abbr> +38 044 232 37 68
+										<i class="fa fa-phone" aria-hidden="true"></i>&nbsp;<abbr title="Phone">P:</abbr>&nbsp;<span>+38 044 232 37 68</span><br/>
+										<i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;<abbr title="Mail">M:</abbr>&nbsp;<a href="mailto:ua.office@pixelvalue.io">ua.office@pixelvalue.io</a>
 									</div>
 								</address>
-								<a href="https://www.google.com.ua/maps/place/Vyborzka+St,+104,+Kyiv/@50.4516251,30.4236405,791m/data=!3m1!1e3!4m5!3m4!1s0x40d4cc408497cb67:0xc1de3dc49d80e182!8m2!3d50.4520985!4d30.4217489" class="a-btn a-block" target="_blank">Link to google map</a>
 							</div>
 						</div>
 					</div>
