--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   						<div class="col-sm-12">
   							<div class="col-sm-6 col-sm-push-6 col-sm-67 col-sm-6668">
 
-  								<img class="img-responsive image-resize-mode"
-  									src="assets/responsive-displays-320.png"
+  								<img class="lazy-img img-responsive image-resize-mode"
+  									data-src="assets/responsive-displays-320.png"
   									srcset="assets/responsive-displays-720.png 700w,
   													assets/responsive-displays.png 1000w"
   								/>
@@ -143,10 +143,10 @@
 
   					<div class="carousel-inner" role="listbox">
   						<div class="item active">
-  							<img src="assets/phone-app.jpg" class="img-responsive" />
+  							<img data-src="assets/phone-app.jpg" class="lazy-img img-responsive" />
   						</div>
   						<div class="item">
-  							<img src="assets/phone-app.jpg" class="img-responsive" />
+  							<img data-src="assets/phone-app.jpg" class="lazy-img img-responsive" />
   							<!--<div class="carousel-caption">
   								...
   							</div>-->
@@ -162,7 +162,7 @@
   				<ul class="list-pv service-mobile--list">
   					<li>
 
-  								<img src="assets/react.svg" class="service--icon" />
+  								<img data-src="assets/react.svg" class="lazy-img service--icon" />
   								<span class="text-left">
   									React Native
   								</span>
@@ -170,7 +170,7 @@
   					</li>
   					<li>
 
-  								<img src="assets/Xamagon.png" class="service--icon" />
+  								<img data-src="assets/Xamagon.png" class="lazy-img service--icon" />
 
   								<span class="text-left">
   									Xamarin
@@ -179,7 +179,7 @@
   					</li>
   					<li>
 
-  								<img src="assets/nativescript.png" class="service--icon" />
+  								<img data-src="assets/nativescript.png" class="lazy-img service--icon" />
 
   								<span  class="text-left">
   									NativeScript/Angular2
@@ -211,8 +211,8 @@
 
   					<div class="col-sm-6">
   						<div class="center-block blocsapp-device blocsapp-device-imac">
-  							<img class="img-responsive"
-  										src="assets/chats-640.jpg"
+  							<img class="lazy-img img-responsive"
+  										data-src="assets/chats-640.jpg"
   										srcset="assets/chats-320.jpg 300w,
   														assets/chats-640.jpg 1000w"
   							/>
@@ -226,7 +226,7 @@
 
   							<li>
 
-  										<img src="assets/mautic.png" class="service--icon" />
+  										<img data-src="assets/mautic.png" class="lazy-img service--icon" />
   										<span class="text-left">
   											Marketing automation
   										</span>
@@ -234,7 +234,7 @@
   							</li>
   							<li>
 
-  										<img src="assets/logo_bpm.png" class="service--icon service--icon-white-bg" />
+  										<img data-src="assets/logo_bpm.png" class="lazy-img service--icon service--icon-white-bg" />
 
   										<span class="text-left">
   											CRM / bpm*online
@@ -243,7 +243,7 @@
   							</li>
   							<li>
 
-  										<img src="assets/splunk-logo-round.png" class="service--icon" />
+  										<img data-src="assets/splunk-logo-round.png" class="lazy-img service--icon" />
 
   										<span class="text-left">
   											Splunk
@@ -274,8 +274,8 @@
   					<div class="col-sm-12">
   					<div class="col-sm-6">
   						<div class="center-block blocsapp-device blocsapp-device-mb blocsapp-device-mbp">
-  							<img class="img-responsive"
-  										src="assets/HIPAA_Dashboard_screenshot-320.jpg"
+  							<img class="lazy-img img-responsive"
+  										data-src="assets/HIPAA_Dashboard_screenshot-320.jpg"
   										srcset="assets/HIPAA_Dashboard_screenshot-320.jpg 600w,
   														assets/HIPAA_Dashboard_screenshot.jpg 1000w"
   							/>
